# Cris

./: .gitignore  Bot.py  Cargo.toml  README.md  main.py  requirements.txt
src/: Bot.py  Database.py  main.py  main.rs
src/event_handlers/: event_handlers.rs  message.rs  mod.rs  on_message.py  on_message.rs  on_raw_reaction.py  on_ready.py  ready.rs
src/servers/: mod.rs
src/servers/phyner/: phyner.py
src/servers/tepcott/: SlashCommands.py  database.py  mod.rs  reserves.py  spreadsheet.py  tepcott.py  tepcott.rs
src/servers/tepcott/commands/: _reserve_assign_unassign.py  _reserve_needed.py  _reserve_remove.py  mod.rs  pits.py  qualifying.rs  raceday.py  reserve.py  reserve_assign_unassign.py  reserve_needed.py  startingorder.py  startingtimes.py  submit.rs  track.py  update_divs.rs  updatedivs.py  vehicles.py
src/servers/tepcott/event_handlers/: message.rs  mod.rs  on_message.rs  on_raw_reaction.py  on_ready.py
