[package]
name = "cris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
google-sheets4 = "4.0.1"
regex = "1.7.0"
serde = "1.0.152"
serde_json = "1.0.91"
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
yup-oauth2 = "8.1.0"
